@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:24:37 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:29:56 +0800</lastBuildDate>
 
   <item>
   <title>東京藝妓文化大揭秘！體驗傳統日本的祕密花街</title>
@@ -19,5 +19,11 @@
   <description>東京萬聖節瘋狂派對！妖怪盂蘭盆舞、超自然貓節、市民節日等你來玩</description>
   <category>Others</category>
   <pubDate>Thu, 10 Oct 2024 16:24:37 +0800</pubDate>
+</item><item>
+  <title>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</title>
+  <link>https://www.famechos.me/news/日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾/</link>
+  <description>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:29:56 +0800</pubDate>
 </item></channel>
 </rss>
