@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Thu, 10 Oct 2024 16:26:08 +0800</lastBuildDate>
+  <lastBuildDate>Thu, 10 Oct 2024 16:29:56 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -106,5 +106,11 @@
   <description>睽違8年！朴宰范推出20首歌曲的經典R&amp;B專輯：我的音樂是我的驕傲</description>
   <category>K-Pop</category>
   <pubDate>Thu, 10 Oct 2024 16:26:08 +0800</pubDate>
+</item><item>
+  <title>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</title>
+  <link>https://www.famechos.me/news/日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾/</link>
+  <description>日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾</description>
+  <category>Others</category>
+  <pubDate>Thu, 10 Oct 2024 16:29:56 +0800</pubDate>
 </item></channel>
 </rss>
