@@ -120,4 +120,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/日本生活新手必看！專業級別的情報幫你順暢過渡，告別文化震撼和生活困擾/</ns0:loc>
+    <ns0:lastmod>2024-10-10T16:29:56+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
