@@ -50,3 +50,4 @@ https://www.koreaherald.com/view.php?ud=20241008050463
 https://www.koreaherald.com/view.php?ud=20241010050640
 https://tokyocheapo.com/entertainment/japanese-culture-and-tradition/where-to-see-geisha-in-tokyo/
 https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-early-halloween-yokai-and-local-festivals/
+https://www.koreaherald.com/view.php?ud=20241008050665
